fix dark mode when system is dark

--- a/src/content/blog/border-radius-tricks/border-styles.css
+++ b/src/content/blog/border-radius-tricks/border-styles.css
@@ -5,6 +5,13 @@
     --surface: black;
   }
 
+  @media (prefers-color-scheme: dark) {
+    .example {
+      --ink: white;
+      --surface: black;
+    }
+  }
+
   .example {
     --ink: black;
     --surface: white;
